--- a/templates/google_test.html
+++ b/templates/google_test.html
@@ -13,7 +13,7 @@
 <body>
 
     <form action="/" method="post">
-        <input id="prompt" name="prompt" placeholder="Prompt here" required/>
+        <textarea id="prompt" name="prompt" placeholder="Prompt here" required></textarea>
         <button value="Submit">Send</button>
     </form>
 
